--- a/formulario.html
+++ b/formulario.html
@@ -1,52 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<title>Formulario</title>
+	<title>Formulário</title>
 
-	<style type="text/css">
-		body {
-			background-color: #ddd;
-			margin: 0 auto;
-			height: 100%;
-		}
-		form {
-			width: 25%;
-			margin: 15% auto;
-			padding: 1% 1% 1% 1%;
-			background-color: white;
-			box-shadow: 2px 2px 10px;
-		}
-		.valorLogin {
-			width: 100%;
-			margin:2px 0px 15px 0px;
-		}
-		.lembrar-me {
-			float: left;
-		}
-		.fazerLogin {
-			padding: 5px;
-		}
-		#botao{
-			padding-top: 15%;
-		}
-	</style>
+	<link rel="stylesheet" type="text/css" href="css/login.css">
+
 </head>
 <body>
 	<form>
-		<div>
-			<label>Nome</label>
+		<label>Nome
 			<input class="valorLogin" type="text" name="login" placeholder="login">
-		</div>
-		<div>
-			<label>Senha</label>
+		</label>
+		<label>Senha
 			<input class="valorLogin" type="password" name="senha" placeholder="senha">
-		</div>
-			<label class="lembrar-me"><input type="checkbox" name="Lembrar">Lembrar-me</label>
-		<div id="botao">
-			<input class="fazerLogin" type="submit" name="Login" value="Fazer Login">
-		</div>
+		</label>
+		<label class="lembrar-me"><input type="checkbox" name="Lembrar">Lembrar-me</label>
+		<input class="fazerLogin" type="submit" name="Login" value="Fazer Login">
 	</form>
 </body>
 </html>
