Utilizado javaScript para alertar quanto a login.

--- a/formulario.html
+++ b/formulario.html
@@ -52,7 +52,7 @@
 			<input class="valorLogin" type="password" name="senha" placeholder="senha">
 		</label>
 		<label class="lembrar-me"><input type="checkbox" name="Lembrar">Lembrar-me</label>
-		<input class="fazerLogin" type="submit" name="Login" value="Fazer Login">
+		<input class="fazerLogin" onclick="alert('Login com sucesso.')" id="confirtmarLogin" type="submit" name="Login" value="Fazer Login">
 	</form>
 </body>
 </html>
