--- a/formulario.html
+++ b/formulario.html
@@ -5,6 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<title>Formulário</title>
 
+	<link rel="shortcut icon" href="icon/icon.ico">
+
 	<style type="text/css">
 		body {
 			background-color: #3399ff;
